readme and micronaut config changes